--- a/_sass/4-layouts/_page-home.scss
+++ b/_sass/4-layouts/_page-home.scss
@@ -1,6 +1,6 @@
-.lates-title {
+.aboutme-title {
   position: relative;
-  margin-bottom: 80px;
+  // margin-bottom: 80px;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 1px;
@@ -9,11 +9,11 @@
   text-align: center;
   &:after,
   &:before {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%); 
+    transform: translateY(-50%);
     height: 1px;
     background: $light-gray;
   }
@@ -30,7 +30,47 @@
 
   @media only screen and (max-width: $tablet) {
     margin-bottom: 40px;
-    
+
+    &:after,
+    &:before {
+      width: calc(50% - 70px);
+    }
+  }
+}
+
+.lates-title {
+  position: relative;
+  margin-bottom: 80px;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: normal;
+  text-align: center;
+  &:after,
+  &:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 1px;
+    background: $light-gray;
+  }
+
+  &:after {
+    width: calc(50% - 90px);
+    left: 0;
+  }
+
+  &:before {
+    width: calc(50% - 90px);
+    right: 0;
+  }
+
+  @media only screen and (max-width: $tablet) {
+    margin-bottom: 40px;
+
     &:after,
     &:before {
       width: calc(50% - 70px);
