--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,14 +7,39 @@
           <h1 class="hero__title">{{ site.data.settings.author.say-hello }}</h1>
           <p class="hero__subtitle">{{ site.data.settings.author.bio }}</p>
           <div class="hero__social">
-            <span class="hero__social-title">Follow Me |</span>
-            {% include contact-link.html %}
+            <span class="hero__social-title">Email |</span>
+            <a href="#"
+              ><ion-icon name="mail" style="font-size: 25px"></ion-icon
+            ></a>
+            yeongeun93@gmail.com
+          </div>
+          <div class="hero__social">
+            <span class="hero__social-title">Phone |</span>
+            <a href="#">
+              <ion-icon name="call" style="font-size: 25px"></ion-icon></a
+            >010.8810.8463
+          </div>
+          <div class="hero__social">
+            <span class="hero__social-title">GitHub |</span>
+            <a href="{{ site.data.settings.twitter }}">
+              <ion-icon name="logo-github" style="font-size: 25px"></ion-icon
+            ></a>
+          </div>
+          <div class="hero__social">
+            <span class="hero__social-title">Tistory |</span>
+            <a href="{{ site.data.settings.twitter }}">
+              <ion-icon name="bookmarks" style="font-size: 25px"></ion-icon
+            ></a>
+            <!-- {% include contact-link.html %} -->
           </div>
         </div>
       </div>
       <div class="col col-6 col-t-12">
         <div class="hero__image">
-          <img src="{{site.baseurl}}/images/{{ site.data.settings.author.image }}" alt="">
+          <img
+            src="{{site.baseurl}}/images/{{ site.data.settings.author.image }}"
+            alt=""
+          />
         </div>
       </div>
     </div>
