--- a/_sass/3-modules/_hero.scss
+++ b/_sass/3-modules/_hero.scss
@@ -13,7 +13,7 @@
     justify-content: center;
     width: 100%;
     padding: 0 40px 0 0;
-    
+
     .hero__title {
       font-size: 38px;
       font-weight: normal;
@@ -30,14 +30,21 @@
     }
 
     .hero__social-title {
+      font-size: 17px;
       font-weight: 700;
     }
 
+    .hero__social-text {
+      font-size: 17px;
+      letter-spacing: 0.5px;
+      font-weight: 500;
+      padding: 0 10px 5px 10px;
+    }
   }
 
   .hero__image {
     img {
-      box-shadow: 0 1px 4px rgba(0,0,0,0.15);
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
     }
   }
 
@@ -68,7 +75,7 @@
 
     .hero__image {
       margin-bottom: 20px;
-      
+
       img {
         box-shadow: none;
       }
