--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -4,17 +4,26 @@
     <div class="row">
       <div class="col col-8 col-t-10 col-m-12">
         <div class="aboutme__content">
-          <h5 class="aboutme__title">Contacts</h5>
-          <div class="aboutme__subtitle">GitHub</div>
-          <div class="aboutme__subtitle">BLog</div>
-        </div>
-        <div class="aboutme__content">
-          <h5 class="aboutme__title">{{site.data.settings.aboutme.title01}}</h5>
+          <h5 class="aboutme__title">{{site.data.settings.education.title}}</h5>
           <div class="aboutme__subtitle">
-            {{site.data.settings.aboutme.01sub01}}
+            {{site.data.settings.education.sub1}}
           </div>
           <div class="aboutme__subtitle">
-            {{site.data.settings.aboutme.01sub02}}
+            {{site.data.settings.education.sub2}}
+          </div>
+          <div class="aboutme__period">
+            {{site.data.settings.education.per2}}
+          </div>
+        </div>
+        <div class="aboutme__content">
+          <h5 class="aboutme__title">
+            {{site.data.settings.certificate.title}}
+          </h5>
+          <div class="aboutme__subtitle">
+            {{site.data.settings.certificate.sub1}}
+          </div>
+          <div class="aboutme__subtitle">
+            {{site.data.settings.certificate.sub2}}
           </div>
         </div>
       </div>
