--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,10 @@
     rel="stylesheet"
   />
   <!-- Ionicons -->
+  <link
+    href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css"
+    rel="stylesheet"
+  />
   <script
     type="module"
     src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
