--- a/_sass/3-modules/_aboutme.scss
+++ b/_sass/3-modules/_aboutme.scss
@@ -15,15 +15,25 @@
     padding: 20px 0 20px 0;
 
     .aboutme__title {
-      font-size: 24px;
-      font-weight: normal;
+      font-size: 28px;
+      font-weight: 700;
       margin-bottom: 10px;
     }
 
     .aboutme__subtitle {
-      font-size: 18px;
+      font-size: 20px;
       line-height: 32px;
       letter-spacing: 0.5px;
+      padding-top: 5px;
+    }
+
+    .aboutme__period {
+      font-size: 16px;
+      // line-height: 32px;
+      // letter-spacing: 0.5px;
+      font-weight: 200;
+      font-style: italic;
+      padding-left: 10px;
     }
 
     .aboutme__social {
